made the numericalOutputs class into a separate file so its more modular and doesnt take up so much space in main.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,15 @@ project(calc)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find SDL2 package
 find_package(SDL2 REQUIRED CONFIG)
-# Find OpenGL
 find_package(OpenGL REQUIRED)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+include_directories(src)
+
+add_executable(${PROJECT_NAME}
+    src/main.cpp
+    src/numOutputs.cpp
+)
 
 target_link_libraries(${PROJECT_NAME}
     SDL2::SDL2main
@@ -17,7 +20,6 @@ target_link_libraries(${PROJECT_NAME}
     OpenGL::GL
 )
 
-# Set the output directory for the executable
 set_target_properties(${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
