made a command box for adding input later :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ add_executable(${PROJECT_NAME}
     src/main.cpp
     src/numOutputs.cpp
     src/window.cpp
-    src/graph.cpp
+    src/graphWindow.cpp
+    src/ui.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
