--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,4 +1,3 @@
-# GitHub Actions workflow for building and testing a CMake project with SDL2 and SDL2_ttf
 name: CMake Build and Test
 
 on:
@@ -53,9 +52,9 @@ jobs:
         curl -LO https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-devel-2.20.1-VC.zip
         7z x SDL2-devel-2.28.2-VC.zip -oSDL2
         7z x SDL2_ttf-devel-2.20.1-VC.zip -oSDL2_ttf
-        # Set environment variables for SDL2 and SDL2_ttf
-        echo "SDL2_DIR=${{ github.workspace }}/SDL2" >> $GITHUB_ENV
-        echo "SDL2_TTF_DIR=${{ github.workspace }}/SDL2_ttf" >> $GITHUB_ENV
+        # Set environment variables for CMake to locate SDL2 and SDL2_ttf
+        echo "SDL2_DIR=${{ github.workspace }}/SDL2/SDL2-2.28.2" >> $GITHUB_ENV
+        echo "SDL2_TTF_DIR=${{ github.workspace }}/SDL2_ttf/SDL2_ttf-2.20.1" >> $GITHUB_ENV
 
     - name: Set reusable strings
       id: strings
@@ -69,8 +68,7 @@ jobs:
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DSDL2_DIR=${{ env.SDL2_DIR }} 
-        -DSDL2_TTF_DIR=${{ env.SDL2_TTF_DIR }}
+        -DCMAKE_PREFIX_PATH="${{ env.SDL2_DIR }};${{ env.SDL2_TTF_DIR }}"
         -S ${{ github.workspace }}
 
     - name: Build
