--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,3 +1,4 @@
+# .github/workflows/cmake.yml
 name: CMake Build and Test
 
 on:
@@ -15,16 +16,23 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release, Debug]
-        c_compiler: [gcc, clang, cl]
+
+        # ─── compilers ────────────────────────────────────────────────────────────
+        c_compiler:  [gcc, clang, cl]
         include:
+          # Windows → MSVC
           - os: windows-latest
-            c_compiler: cl
+            c_compiler:  cl
             cpp_compiler: cl
+
+          # Linux → GCC
           - os: ubuntu-latest
-            c_compiler: gcc
+            c_compiler:  gcc
             cpp_compiler: g++
+
+          # Linux → Clang
           - os: ubuntu-latest
-            c_compiler: clang
+            c_compiler:  clang
             cpp_compiler: clang++
         exclude:
           - os: windows-latest
@@ -33,47 +41,58 @@ jobs:
             c_compiler: clang
           - os: ubuntu-latest
             c_compiler: cl
-
     steps:
-    - name: Checkout code
+    # ──────────────────────────────────────────────────────────────────────────────
+    - name: Checkout repository
       uses: actions/checkout@v4
 
-    # Install SDL2 dependencies on Linux
-    - name: Install SDL2 dependencies (Linux only)
+    # ─── SDL2 for Linux ───────────────────────────────────────────────────────────
+    - name: Install SDL2 (Linux only)
       if: runner.os == 'Linux'
-      run: sudo apt-get update && sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev
 
-    # Install SDL2 dependencies on Windows
+    # ─── SDL2 for Windows ─────────────────────────────────────────────────────────
     - name: Setup SDL2 (Windows only)
       if: runner.os == 'Windows'
+      shell: bash            # ← make the step run under bash
       run: |
-        # Download and extract precompiled SDL2 and SDL2_ttf binaries
-        curl -LO https://www.libsdl.org/release/SDL2-devel-2.28.2-VC.zip
-        curl -LO https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-devel-2.20.1-VC.zip
-        7z x SDL2-devel-2.28.2-VC.zip -oSDL2
-        7z x SDL2_ttf-devel-2.20.1-VC.zip -oSDL2_ttf
-        # Set environment variables for CMake to locate SDL2 and SDL2_ttf
-        echo "SDL2_DIR=${{ github.workspace }}/SDL2/SDL2-2.28.2" >> $GITHUB_ENV
-        echo "SDL2_TTF_DIR=${{ github.workspace }}/SDL2_ttf/SDL2_ttf-2.20.1" >> $GITHUB_ENV
+        set -euo pipefail
 
-    - name: Set reusable strings
-      id: strings
+        # Download pre-built binaries
+        curl -L -o SDL2.zip     https://www.libsdl.org/release/SDL2-devel-2.28.2-VC.zip
+        curl -L -o SDL2_ttf.zip https://www.libsdl.org/projects/SDL_ttf/release/SDL2_ttf-devel-2.20.1-VC.zip
+
+        7z x SDL2.zip     -oSDL2
+        7z x SDL2_ttf.zip -oSDL2_ttf
+
+        # Tell later steps where the packages live
+        echo "SDL2_DIR=${GITHUB_WORKSPACE}/SDL2/SDL2-2.28.2"             >> "$GITHUB_ENV"
+        echo "SDL2_TTF_DIR=${GITHUB_WORKSPACE}/SDL2_ttf/SDL2_ttf-2.20.1" >> "$GITHUB_ENV"
+
+    # ─── reusable path -----------------------------------------------------------
+    - name: Define build directory
+      id: paths
       shell: bash
-      run: |
-        echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+      run: echo "build_dir=${GITHUB_WORKSPACE}/build" >> "$GITHUB_OUTPUT"
 
+    # ─── configure ---------------------------------------------------------------
     - name: Configure CMake
       run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        cmake
+        -B ${{ steps.paths.outputs.build_dir }}
+        -S ${{ github.workspace }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DCMAKE_PREFIX_PATH="${{ env.SDL2_DIR }};${{ env.SDL2_TTF_DIR }}"
-        -S ${{ github.workspace }}
 
+    # ─── build --------------------------------------------------------------------
     - name: Build
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build ${{ steps.paths.outputs.build_dir }} --config ${{ matrix.build_type }}
 
+    # ─── test ---------------------------------------------------------------------
     - name: Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      working-directory: ${{ steps.paths.outputs.build_dir }}
       run: ctest --build-config ${{ matrix.build_type }}
