changed cmake and SDL headers so they are recognized easier by cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(calc)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(SDL2 REQUIRED CONFIG)
-find_package(SDL2_ttf CONFIG REQUIRED)
+find_package(SDL2 REQUIRED)
+find_package(SDL2_ttf CONFIG)
 
 include_directories(src)
 
