cmakelists.txt edit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(SDL2 REQUIRED)
-find_package(SDL2_ttf CONFIG)
+find_package(SDL2_ttf REQUIRED)
 
 include_directories(src)
 
@@ -16,11 +16,8 @@ add_executable(${PROJECT_NAME}
     src/ui.cpp
 )
 
-target_link_libraries(${PROJECT_NAME}
-    SDL2::SDL2main
-    SDL2::SDL2
-    SDL2_ttf::SDL2_ttf
-)
+target_link_libraries(calc
+    PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
