--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,13 @@
 {
     "files.associations": {
-        "cmath": "cpp",
         "iostream": "cpp",
-        "iosfwd": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "cctype": "cpp",
         "charconv": "cpp",
         "clocale": "cpp",
+        "cmath": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
         "cstdarg": "cpp",
@@ -42,6 +41,7 @@
         "utility": "cpp",
         "format": "cpp",
         "initializer_list": "cpp",
+        "iosfwd": "cpp",
         "istream": "cpp",
         "limits": "cpp",
         "new": "cpp",
@@ -59,9 +59,6 @@
         "cfenv": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp",
-        "cmake.generator": "Ninja", 
-        "cmake.buildDirectory": "${workspaceFolder}/build",
-        "cmake.configureOnOpen": true
+        "variant": "cpp"
     }
 }
